# dregg

./: .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  AUDIT-FINDINGS.md  AUDIT-pyana-turn-verifier-test-quality.md  AUTHORIZATION-CUSTOM-DESIGN.md  CORE-AUDIT.md  Cargo.toml  DESIGN-dsl.md  EXECUTOR-HONESTY-AUDIT.md  FEDERATION-UNIFICATION-DESIGN.md  GOAL-ARKLIB-VACUITY.md  GOAL-COLLECTIVE-FICTION-DEMO.md  GOAL-DISTRIBUTED-DEOS.md  GOAL-DREGG-DOC-WEB.md  GOAL-FEDERATION.md  GOAL-FRI-PRODUCT.md  GOAL-GREENS-THAT-MEAN-SOMETHING.md  GOAL-HONEST-VERIFICATION.md  GOAL-MULTICHAIN-SETTLEMENT.md  GOAL-PQ-FRONTIERS.md  GOAL-PQ.md  GOAL-STARK-KILL.md  GOAL-VERIFIED-SYSTEM.md  GOAL-fable.md  GOAL-vk-nullifier-flip.md  GOAL.md  GOALS-INDEX.md  HANDOFF.md  HATCHERY.md  HORIZONLOG.md  HOUYHNHNM-DEEP-CRITIQUE.md  IGNORED-TESTS-AUDIT.md  NEW-WORLD.md  NOTICE-gpui-component.md  PERSVATI.md  PREV-SESSION-AUDIT.md  PYANA-FLAWS-FROM-APPS.md  PYANA_DESIGN.md  (+18 more)
agent-host/: Cargo.toml
agent-host/src/: lib.rs
agent-platform/: Cargo.toml  README.md
agent-platform/examples/: grain_local_e2e.rs
agent-platform/src/: lib.rs  node.rs  serve.rs  share.rs  transcript.rs
android-cell/: Cargo.toml
android-cell/fixtures/: android_home_screencap.raw
android-cell/src/: appfactory.rs  apps.rs  broadcastgate.rs  checkpoint.rs  checkpointed_runtime.rs  contentgate.rs  frame.rs  input.rs  intentgate.rs  lib.rs  netgate.rs  notifgate.rs  organgate.rs  permgate.rs  present.rs  runtime.rs  storagegate.rs
android-cell/tests/: live_emulator_spike.rs
app-framework/: Cargo.toml
app-framework/examples/: deos_app_in_an_afternoon.rs  deos_council_board.rs  stark_frustum_cull.rs  stark_rehydrate.rs
app-framework/src/: affordance.rs  affordance_endpoint.rs  agent_coordination.rs  auth.rs  authorizer.rs  batch_executor.rs  blinded_endpoint.rs  captp_server.rs  cipherclerk.rs  deos_app.rs  discovery.rs  dispute.rs  dreggverse_map.rs  escrow.rs  fee_policy.rs  fields.rs  hex.rs  inbox_endpoint.rs  invoke.rs  lib.rs  middleware.rs  multi_group.rs  optimistic_fire.rs  payable.rs  persistence.rs  queue_endpoint.rs  reactor.rs  rehydration.rs  ring_trade.rs  scaffold.rs  server.rs  service_promise.rs  starbridge.rs  stark_rehydrate.rs  store.rs  transclude_affordance.rs  vk.rs  wallet.rs  webgen.rs
app-framework/tests/: affordance_doc_app.rs  cipherclerk_sign_action.rs  deos_council_board.rs  deos_optimistic_tempo.rs  embedded_sender_authorized_e2e.rs  escrow_authorization.rs  integration_app_cipherclerk_lifecycle.rs  intent_coordination.rs  no_unchecked.rs  reexpress_subscription.rs  service_promise_ring.rs  wallet_sign_action.rs
attested-dm/: Cargo.toml
attested-dm/dungeons/: broken.dungeon  clockwork_orchard.dungeon  ember_observatory.dungeon  lantern_fen.dungeon  venom_warren.dungeon
attested-dm/examples/: combat.rs  loot_chest.rs  overworld.rs  play.rs  play2.rs  play3.rs  play4.rs  play5.rs  play_authored.rs  savegame.rs  tavern_session.rs  verify_replay.rs
attested-dm/src/: dungeon_dsl.rs  game.rs  lib.rs  overworld.rs  prompt_template.rs  savegame.rs  tests.rs
attested-dm/tests/: dm_model_provenance.rs  dungeon_dsl.rs  savegame.rs
auditable-fund/: .gitignore  Cargo.toml
auditable-fund/examples/: paper_fund.rs
auditable-fund/src/: audit.rs  brain.rs  fund.rs  lib.rs  mandate.rs  oracle.rs
auditable-fund/tests/: fund.rs
blocklace/: Cargo.toml
blocklace/src/: addressing.rs  constitution.rs  cross_reference.rs  delegation.rs  dissemination.rs  dregg_bridge.rs  evidence.rs  finality.rs  finality_tests.rs  lib.rs  ordering.rs  pq.rs  pyana_bridge.rs
blocklace/tests/: byzantine_finality_split.rs  consensus_fault_sim.rs  membership_safety_differential.rs  multi_node_convergence.rs  n3_delivery_gap_probe.rs  perf_growth.rs
bridge/: Cargo.toml  REVIEW-CONCEPTUAL.md  REVIEW-EFFICIENCY.md
bridge/benches/: presentation_bench.rs  solana_verify_bench.rs
bridge/contracts/: deploy.ts  dregg_bridge.compact  dregg_bridge_types.compact  dregg_inclusion.compact  package.json  pyana_bridge.compact  pyana_bridge_types.compact
bridge/examples/: deco_money_in.rs
bridge/mina-zkapp/: package-lock.json  package.json
bridge/src/: action_binding.rs  authorize.rs  convert.rs  delta.rs  ethereum.rs  ethereum_relayer.rs  interchain_adapter.rs  lib.rs  midnight.rs  midnight_contract.compact  midnight_gateway.rs  midnight_inclusion.rs  midnight_observer.rs  midnight_verified.rs  mina.rs  mina_observer.rs  present.rs  solana_consensus.rs  solana_feed.rs  solana_holdings.rs  solana_mirror.rs  solana_provenance.rs  solana_relayer.rs  solana_trustless.rs  solana_wire.rs  stripe_deco.rs  stripe_mirror.rs  tests.rs  verifier.rs
bridge/tests/: committed_double_mint.rs  eth_publics_v2.rs  ethereum_relayer_roundtrip.rs  fold_depth_bound.rs  integration_action_binding.rs  integration_midnight_bridge.rs  integration_present_credential.rs  midnight_observer_live_roundtrip.rs  relayer_adapter_wiring.rs  solana_consensus_mint.rs  solana_devnet_e2e.rs  solana_holdings.rs  solana_local_e2e.rs  solana_lock_trustless.rs  solana_relayer_roundtrip.rs  solana_rooted_harvest.rs  solana_value_path_holes.rs
captp/: Cargo.toml
captp/src/: custody.rs  data_plane.rs  fraud_proof.rs  gc.rs  handoff.rs  handoff_session.rs  lib.rs  netlayer.rs  pipeline.rs  session.rs  (+4 more)
cell/: Cargo.toml  REVIEW-CONCEPTUAL.md  REVIEW-EFFICIENCY.md
cell-crypto/: Cargo.toml
chain/: .env.example  .gitignore  Cargo.toml  DEPLOY.md  README.md  RICHER-CLIENT-DESIGN.md  foundry.toml
circuit/: Cargo.toml  REVIEW-CONCEPTUAL.md  REVIEW-EFFICIENCY.md
circuit-prove/: Cargo.toml
cli/: Cargo.toml
collective-choice/: Cargo.toml
commons-arbiter/: Cargo.toml
confined-swarm/: Cargo.toml
constraint-lowering/: Cargo.toml
coord/: COORD-LEAN-COVERAGE.md  Cargo.toml
cosmos-lightclient/: Cargo.toml
cosmos-lock/: Cargo.toml
credentials/: Cargo.toml
crypto-hashrand/: Cargo.toml
crypto-hermine/: Cargo.toml
crypto-tanuki/: Cargo.toml
crypto-traccoon/: Cargo.toml
crypto-xmvrf/: Cargo.toml
deco-prove/: Cargo.toml
demo-agent/: Cargo.toml
(+9925 files in other folders)
