[package]
name = "dregg-app-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Production application framework for dregg apps — server infra, admin auth, persistence, proof middleware, content stores, escrow lifecycle"

[dependencies]
dregg-sdk = { path = "../sdk" }
dregg-turn = { path = "../turn" }
dregg-intent = { path = "../intent" }
dregg-circuit = { path = "../circuit" }
# `stark_rehydrate` verifies the recursive IVC aggregate (the recursion tower),
# so it depends on the heavy prove crate.
dregg-circuit-prove = { path = "../circuit-prove" }
dregg-cell = { path = "../cell" }
dregg-types = { path = "../types" }
# The Payable DSI + the userspace method-routing core (resolve_against /
# InvokeAuthority / the canonical `payable_descriptor`). Lives BELOW the SDK so
# the SDK's metered tool-gateway charge and these app-facing wrappers go through
# ONE verified `pay` route table. The cipherclerk-bound `invoke` /
# `invoke_with_descriptor` / free `pay` here delegate to that pure core.
dregg-payable = { path = "../dregg-payable" }
# `kzg` is REQUIRED, not optional: `queue_endpoint` (an unconditional module) imports
# `dregg_storage::programmable::{ProgrammableQueue, ValidationContext}`, which storage
# gates behind its `kzg` feature. Without this app-framework fails to compile in any
# subgraph that does not otherwise unify `kzg` on (`cargo build -p dregg-app-framework`
# and every narrow `-p` consumer). Declaring the feature app-framework actually uses.
# `optional`/`server`-gated: the ONLY consumers are the endpoint modules
# (`inbox_endpoint`/`queue_endpoint`/`blinded_endpoint`), all of which sit behind the
# `server` feature. A `no-server` (e.g. wasm32) build does not pull `dregg-storage`.
dregg-storage = { path = "../storage", features = ["kzg"], optional = true }
dregg-captp = { path = "../captp" }

# The REAL transclusion primitive (`starbridge_web_surface::transclusion`): the
# verified cross-cell finalized read (`TranscludedField`/`Provenance`/`Backlinks`),
# the per-viewer `Membrane`, and `SurfaceCapability`/`WebOfCells`. The deos-app
# transclusion affordance (`src/transclude_affordance.rs`) is the NAMED consumer of
# these — it surfaces a transcluded peer field as a first-class framework affordance,
# reinventing neither the attested-read nor the cap model.
starbridge-web-surface = { path = "../starbridge-web-surface" }

# The HTTP app-SERVER surface (`server`/`auth`/`middleware`/the `*_endpoint`
# modules + `deos_app`/`scaffold`/`discovery`/`captp_server`) rides these, and NONE
# of them compile to wasm32 (`mio`/tokio-net, `reqwest`'s transport). They are
# `optional` and gated behind the `server` feature so the framework's CORE — the
# `EmbeddedExecutor` (the in-process turn admitter) + the cell/turn primitives —
# builds wasm-clean without them (`default-features = false`). `server` is in the
# default set, so every existing HTTP-service consumer is unchanged.
axum = { version = "0.8", optional = true }
http = { version = "1", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = { workspace = true }
base64 = { workspace = true }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
tower = "0.5"

[features]
default = ["server"]
dev = ["dregg-sdk/dev"]
# The HTTP app-server surface. Bundles the non-wasm32 transport stack
# (`axum`/`tokio`(full)/`reqwest`/`tower-http`/`http`) + `dregg-storage` (only the
# gated endpoint modules use it), and compiles the server/endpoint modules. ON by
# default so existing consumers are unchanged; a wasm-clean build takes
# `default-features = false` and gets the `EmbeddedExecutor` + primitives only.
server = [
    "dep:axum",
    "dep:http",
    "dep:tower-http",
    "dep:tokio",
    "dep:reqwest",
    "dep:dregg-storage",
]
# PLATFORM gate passthrough (polarity-inverted, .docs-history-noclaude/FEATURE-HYGIENE.md §Lean): the verified
# Lean producer is UNCONDITIONAL on native (the sdk compiles it in by default; runtime-gated
# by `DREGG_LEAN_PRODUCER` / `EmbeddedExecutor::set_lean_producer`). Only wasm32/zkvm builds
# set `no-lean-link`, which compiles the legacy Rust-producer path instead.
no-lean-link = [
    "dregg-sdk/no-lean-link",
]

[lints]
workspace = true
